# thirdeye

./: .gitignore  CMakeLists.txt  README.md  dllmain.cpp  internal.h  main.cpp  syscalls.S  thirdeye.def  thirdeye_core.cpp  thirdeye_core.h
dotnet/: .gitignore  ThirdEye.slnx
dotnet/samples/ThirdEye.Demo/: Program.cs  ThirdEye.Demo.csproj
dotnet/src/ThirdEye/: ThirdEye.cs  ThirdEye.csproj  ThirdEyeException.cs  ThirdEyeOptions.cs  ThirdeyeFormat.cs  ThirdeyeResult.cs
